<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
     android:layout_width="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/opsw"
        android:verticalScrollbarPosition="defaultPosition"
        android:contentDescription="@string/todo2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1.4in"
        android:onClick="onClick3"
        android:text="@string/timer" />

    <Button
        android:id="@+id/button2"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1.08in"
        android:onClick="onClick2"
        android:text="@string/BMI" />

    <Button
        android:id="@+id/button1"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0.76in"
        android:onClick="onClick"
        android:text="@string/send" />

    <TableLayout
        android:layout_width="321dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:layout_marginLeft="0.075in"
        android:layout_marginBottom="0.15in"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"

                android:text="@string/name"
                android:textSize="10pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameAnser"
                android:layout_width="213dp"
                android:layout_height="wrap_content"

                android:autofillHints="enter the string "
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textSize="10pt" />
        </TableRow>

        <TableRow
            android:layout_width="423dp"
            android:layout_height="160dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="70dp"
                android:layout_height="45dp"

                android:text="@string/height"
                android:textSize="10pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/higthawnser"
                android:layout_width="213dp"
                android:layout_height="wrap_content"

                android:autofillHints="enter number"
                android:hint="@string/enter_height_in_cm"
                android:inputType="number"
                android:textSize="10pt" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/weight"
                android:textSize="10pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weigthAwnser2"
                android:layout_width="211dp"
                android:layout_height="wrap_content"

                android:autofillHints="enter number"
                android:hint="@string/enter_weigth_in_kg"
                android:inputType="number"
                android:textSize="10pt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/gender"
                android:textSize="10pt"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/gen"
                android:textSize="10pt" />
        </TableRow>

    </TableLayout>

</FrameLayout>